@@ -1,2 +1,4 @@
 <states>
+  <stateinfo name="initial state">
+  </stateinfo>
 </states>
